--- a/Full-Stack-Chat-App/K8s/backend-secret.example.yml
+++ b/Full-Stack-Chat-App/K8s/backend-secret.example.yml
@@ -1,9 +1,11 @@
 apiVersion: v1
-kind: Secret
+kind: Service
 metadata:
-  name: backend-secrets
+  name: backend
   namespace: chat-app
-type: Opaque
-stringData:
-  MONGODB_URI: "<your-mongodb-atlas-uri>"
-  JWT_SECRET: "<your-jwt-secret>"
+spec:
+  selector:
+    app: backend
+  ports:
+  - port: 5001
+    targetPort: 5001
