--- a/Full-Stack-Chat-App/K8s/backend-secret.example.yml
+++ b/Full-Stack-Chat-App/K8s/backend-secret.example.yml
@@ -1,11 +1,9 @@
 apiVersion: v1
-kind: Service
+kind: Secret
 metadata:
-  name: backend
+  name: backend-secrets
   namespace: chat-app
-spec:
-  selector:
-    app: backend
-  ports:
-  - port: 5001
-    targetPort: 5001
+type: Opaque
+stringData:
+  MONGODB_URI: "<your-mongodb-atlas-uri>"
+  JWT_SECRET: "<your-jwt-secret>"
