--- a/Full-Stack-Chat-App/K8s/frontend-deployment.yml
+++ b/Full-Stack-Chat-App/K8s/frontend-deployment.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend-deployment
+  name: frontend
   namespace: chat-app
 spec:
   replicas: 1
@@ -14,10 +14,10 @@ spec:
         app: frontend
     spec:
       containers:
-        - name: chatapp-frontend
-          image: 0x1luffy/chatapp-frontend:latest
-          ports:
-            - containerPort: 80
-          env:
-            - name: NODE_ENV
-              value: production
+      - name: chatapp-frontend
+        image: 0x1luffy/chatapp-frontend:latest
+        ports:
+        - containerPort: 80
+        env:
+        - name: NODE_ENV
+          value: production
