--- a/Full-Stack-Chat-App/K8s/frontend-deployment.yml
+++ b/Full-Stack-Chat-App/K8s/frontend-deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: chatapp-frontend
-        image: 0x1luffy/3-tier-chat-app-kops:frontend-v1
+        image: image: 0x1luffy/3-tier-chat-app-kops:frontend-__IMAGE_TAG__
         ports:
         - containerPort: 80
         env:
