--- a/Full-Stack-Chat-App/Jenkinsfile
+++ b/Full-Stack-Chat-App/Jenkinsfile
@@ -2,32 +2,50 @@ pipeline {
   agent any
 
   environment {
-    SONAR_HOME = tool "sonarqube"
+    DOCKER_REPO = "0x1luffy/3-tier-chat-app-kops"
+    IMAGE_TAG = "${env.GIT_COMMIT.substring(0,7)}"
   }
 
   stages {
-    stage('Clean UP') {
+
+    stage('Clean Workspace') {
       steps {
         cleanWs()
       }
     }
-    stage('Code Check out') {
+
+    stage('Checkout Code') {
       steps {
         git branch: 'master',
-          url: 'https://github.com/iemafzalhassan/full-stack_chatApp.git'
+            url: 'https://github.com/0x1luffy/Kubernetes-Projects.git'
       }
     }
-    stage('Code Quality') {
+
+    stage('Build & Push Images') {
       steps {
-        withSonarQubeEnv("sonarqube") {
-          sh "$SONAR_HOME/bin/sonar-scanner -Dsonar.projectName=chat-app -Dsonar.projectKey=chat-app -X"
+        dir('Full-Stack-Chat-App') {
+          sh """
+          docker build -t ${DOCKER_REPO}:backend-${IMAGE_TAG} backend
+          docker build -t ${DOCKER_REPO}:frontend-${IMAGE_TAG} frontend
+
+          docker push ${DOCKER_REPO}:backend-${IMAGE_TAG}
+          docker push ${DOCKER_REPO}:frontend-${IMAGE_TAG}
+          """
         }
       }
     }
-    stage('Deploy') {
+
+    stage('Deploy to Kubernetes') {
       steps {
-        script {
-          sh 'docker compose up -d --build'
+        dir('Full-Stack-Chat-App') {
+          sh """
+          sed -i 's|backend-__IMAGE_TAG__|backend-${IMAGE_TAG}|g' K8s/backend-deployment.yml
+          sed -i 's|frontend-__IMAGE_TAG__|frontend-${IMAGE_TAG}|g' K8s/frontend-deployment.yml
+
+          kubectl apply -f K8s/
+          kubectl rollout status deployment/backend -n chat-app
+          kubectl rollout status deployment/frontend -n chat-app
+          """
         }
       }
     }
