--- a/Full-Stack-Chat-App/Jenkinsfile
+++ b/Full-Stack-Chat-App/Jenkinsfile
@@ -2,8 +2,9 @@ pipeline {
   agent any
 
   environment {
-    DOCKER_REPO = "0x1luffy/3-tier-chat-app-kops"
-    IMAGE_TAG = "${env.GIT_COMMIT.substring(0,7)}"
+    DOCKER_REPO   = "0x1luffy/3-tier-chat-app-kops"
+    KUBE_NS       = "chat-app"
+    IMAGE_TAG     = "${env.GIT_COMMIT ? env.GIT_COMMIT.substring(0,7) : BUILD_NUMBER}"
   }
 
   stages {
@@ -21,33 +22,56 @@ pipeline {
       }
     }
 
-    stage('Build & Push Images') {
+    stage('Build Docker Images') {
       steps {
         dir('Full-Stack-Chat-App') {
           sh """
-          docker build -t ${DOCKER_REPO}:backend-${IMAGE_TAG} backend
-          docker build -t ${DOCKER_REPO}:frontend-${IMAGE_TAG} frontend
-
-          docker push ${DOCKER_REPO}:backend-${IMAGE_TAG}
-          docker push ${DOCKER_REPO}:frontend-${IMAGE_TAG}
+            docker build -t ${DOCKER_REPO}:backend-${IMAGE_TAG} backend
+            docker build -t ${DOCKER_REPO}:frontend-${IMAGE_TAG} frontend
           """
         }
       }
     }
 
-    stage('Deploy to Kubernetes') {
+    stage('Push Images to DockerHub') {
       steps {
-        dir('Full-Stack-Chat-App') {
+        withCredentials([usernamePassword(
+          credentialsId: 'dockerhub-creds',
+          usernameVariable: 'DOCKER_USER',
+          passwordVariable: 'DOCKER_PASS'
+        )]) {
           sh """
-          sed -i 's|backend-__IMAGE_TAG__|backend-${IMAGE_TAG}|g' K8s/backend-deployment.yml
-          sed -i 's|frontend-__IMAGE_TAG__|frontend-${IMAGE_TAG}|g' K8s/frontend-deployment.yml
-
-          kubectl apply -f K8s/
-          kubectl rollout status deployment/backend -n chat-app
-          kubectl rollout status deployment/frontend -n chat-app
+            echo "\$DOCKER_PASS" | docker login -u "\$DOCKER_USER" --password-stdin
+            docker push ${DOCKER_REPO}:backend-${IMAGE_TAG}
+            docker push ${DOCKER_REPO}:frontend-${IMAGE_TAG}
           """
         }
       }
+    }
+
+    stage('Deploy to Kubernetes (kOps)') {
+      steps {
+        dir('Full-Stack-Chat-App') {
+          sh """
+            sed -i 's|backend-__IMAGE_TAG__|backend-${IMAGE_TAG}|g' K8s/backend-deployment.yml
+            sed -i 's|frontend-__IMAGE_TAG__|frontend-${IMAGE_TAG}|g' K8s/frontend-deployment.yml
+
+            kubectl apply -f K8s/ -n ${KUBE_NS}
+
+            kubectl rollout status deployment/backend -n ${KUBE_NS}
+            kubectl rollout status deployment/frontend -n ${KUBE_NS}
+          """
+        }
+      }
+    }
+  }
+
+  post {
+    success {
+      echo "✅ CI/CD pipeline completed successfully"
+    }
+    failure {
+      echo "❌ CI/CD pipeline failed"
     }
   }
 }
