--- a/Full-Stack-Chat-App/K8s/frontend-service.yml
+++ b/Full-Stack-Chat-App/K8s/frontend-service.yml
@@ -1,9 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend
+  name: frontend-service
   namespace: chat-app
 spec:
+  type: LoadBalancer
   selector:
     app: frontend
   ports:
